Python (Local, docker-compose direct, Remote Container)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
      image: mcr.microsoft.com/azure-functions/python:3.0-python3.8-core-tools
      volumes:
      - .:/workspace:cached
-     command: /workspace/scripts/funcy-python-initialize.sh
+     entrypoint: /workspace/scripts/funcy-python-initialize.sh
+     command: /workspace/scripts/funcy-python-start.sh
      ports:
      - 7071:7071
