--- a/local.settings.json
+++ b/local.settings.json
@@ -1,7 +1,6 @@
 {
   "IsEncrypted": false,
   "Values": {
-    "FUNCTIONS_WORKER_RUNTIME": "python",
-    "AzureWebJobsStorage": "UseDevelopmentStorage=true"
+    "FUNCTIONS_WORKER_RUNTIME": "python"
   }
 }
