--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
-    "recommendations": [
-      "ms-azuretools.vscode-azurefunctions",
-      "ms-python.python",
-      "azuretools.vscode-docker"
-    ]
+  "recommendations": [
+    "ms-azuretools.vscode-azurefunctions",
+    "ms-python.python",
+    "ms-python.vscode-pylance",
+    "ms-vscode-remote.remote-containers"
+  ]
 }
-  
