--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,11 +2,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Start and Debug Function",
+            "name": "Attach to Python Functions",
             "type": "python",
             "request": "attach",
             "port": 9091,
-            "preLaunchTask": "func: host start"
+            "preLaunchTask": "func: host start" 
         }
     ]
 }
